# mesdoc

./: Cargo.toml  README.md
src/: constants.rs  error.rs  interface.rs  lib.rs  main.rs  parser.rs  utils.rs
src/interface/: document.rs  element.rs  elements.rs  mod.rs  uncare.rs
src/parser/: matched.rs  mod.rs  rule.rs
src/rules/: all.rs  attr.rs  class.rs  id.rs  mod.rs  name.rs  pseudo.rs
src/selector/: interface.rs  mod.rs  pattern.rs  rule.rs  selector.rs
