[package]
name = "mesdoc"
version = "0.1.2"
authors = ["jxz_211 <jxz_211@163.com>"]
edition = "2018"
license = "MIT"
keywords = ["html", "querySelectorAll", "dom"]
repository = "https://github.com/fefit/mesdoc"
categories = ["web-programming"]
description = "An api to get ability to operate html document, include `querySelector` and other DOM operation."
exclude = [".vscode/*.*", ".editorconfig"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
thiserror = "1.0.23"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]